# FogML-Zephyr-LwM2M

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
boards/: thingy91_nrf9160_ns.conf
src/: fogml_config.h  main.c
src/fogml_generated/: random_forest_model.c
src/objects/: objects.h  pattern_detector.c
tools/: FogML_SDK_Tools_Zephyr.ipynb  FogML_SDK_Tools_Zephyr_LwM2M.ipynb
